--- a/src/view/landingPage.ui
+++ b/src/view/landingPage.ui
@@ -29,7 +29,7 @@
    <iconset>
     <normaloff>../../assets/logo_EEC_grande.png</normaloff>../../assets/logo_EEC_grande.png</iconset>
   </property>
-  <widget class="QWidget" name="mainLayout">
+  <widget class="QWidget" name="landingPage">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -45,10 +45,7 @@
      <height>700</height>
     </size>
    </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: #ffffff;</string>
-   </property>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="backgroundImage">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -57,119 +54,154 @@
       <x>0</x>
       <y>0</y>
       <width>1080</width>
-      <height>150</height>
+      <height>700</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
+      <horstretch>10</horstretch>
+      <verstretch>6</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>1080</width>
+      <height>700</height>
+     </size>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../../assets/Qt/qtSources.qrc">:/Images/Images/logo_EEC_grande.png</pixmap>
+     <pixmap>../../assets/Images/BackgroundApp.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>false</bool>
     </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    <property name="wordWrap">
+     <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="EccLogo">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>140</y>
-      <width>611</width>
-      <height>101</height>
+      <x>0</x>
+      <y>195</y>
+      <width>1080</width>
+      <height>160</height>
      </rect>
     </property>
-    <property name="styleSheet">
-     <string notr="true">Background-color: #0C58A4;</string>
+    <property name="tabletTracking">
+     <bool>false</bool>
+    </property>
+    <property name="acceptDrops">
+     <bool>false</bool>
+    </property>
+    <property name="statusTip">
+     <string/>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::NoFrame</enum>
     </property>
     <property name="text">
-     <string>ESPACIO RESERVADO PARA DASHBOARD</string>
+     <string/>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::RichText</enum>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../assets/Images/logo_EEC_grande.png</pixmap>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>260</y>
-      <width>171</width>
-      <height>71</height>
+      <x>460</x>
+      <y>379</y>
+      <width>211</width>
+      <height>61</height>
      </rect>
+    </property>
+    <property name="toolTip">
+     <string notr="true"/>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-    background-color: #CBCBCB;
-    color: black;
+    background-color: #0C58A4;
+    color: white;
     border: 1px solid rgb(91, 83, 81);
 	border-radius: 8px;
 }</string>
     </property>
     <property name="text">
-     <string>Buscador de proyectos</string>
+     <string>Empezar</string>
+    </property>
+    <property name="autoDefault">
+     <bool>false</bool>
+    </property>
+    <property name="default">
+     <bool>false</bool>
+    </property>
+    <property name="flat">
+     <bool>false</bool>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>650</x>
-      <y>260</y>
-      <width>171</width>
-      <height>71</height>
+      <x>890</x>
+      <y>580</y>
+      <width>180</width>
+      <height>50</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-    background-color: #CBCBCB;
-    color: black;
+    background-color: #0C58A4;
+    color: white;
     border: 1px solid rgb(91, 83, 81);
 	border-radius: 8px;
 }</string>
     </property>
     <property name="text">
-     <string>Agregar y analizar</string>
+     <string>Ayuda</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>340</y>
-      <width>401</width>
-      <height>61</height>
+      <x>890</x>
+      <y>640</y>
+      <width>180</width>
+      <height>50</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">color : #000000;
-border: 1px solid transparent;
-font-size: 30px;</string>
+     <string notr="true">QPushButton {
+    background-color: #0C58A4;
+    color: white;
+    border: 1px solid rgb(91, 83, 81);
+	border-radius: 8px;
+}</string>
     </property>
     <property name="text">
-     <string>Proyectos vigentes</string>
+     <string>Acerca de</string>
     </property>
-   </widget>
-   <widget class="QTableWidget" name="tableWidget">
-    <property name="geometry">
-     <rect>
-      <x>100</x>
-      <y>410</y>
-      <width>880</width>
-      <height>200</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true"/>
-    </property>
-    <attribute name="horizontalHeaderVisible">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="horizontalHeaderCascadingSectionResizes">
-     <bool>false</bool>
-    </attribute>
    </widget>
   </widget>
  </widget>
