--- a/src/view/mainWindow.ui
+++ b/src/view/mainWindow.ui
@@ -29,7 +29,7 @@
    <iconset>
     <normaloff>../../assets/logo_EEC_grande.png</normaloff>../../assets/logo_EEC_grande.png</iconset>
   </property>
-  <widget class="QWidget" name="landingPage">
+  <widget class="QWidget" name="mainStackedWindow">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -45,164 +45,6 @@
      <height>700</height>
     </size>
    </property>
-   <widget class="QLabel" name="backgroundImage">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>1080</width>
-      <height>700</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Ignored" vsizetype="Ignored">
-      <horstretch>10</horstretch>
-      <verstretch>6</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>1080</width>
-      <height>700</height>
-     </size>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap>../../assets/Images/BackgroundApp.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>false</bool>
-    </property>
-    <property name="wordWrap">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="EccLogo">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>195</y>
-      <width>1080</width>
-      <height>160</height>
-     </rect>
-    </property>
-    <property name="tabletTracking">
-     <bool>false</bool>
-    </property>
-    <property name="acceptDrops">
-     <bool>false</bool>
-    </property>
-    <property name="statusTip">
-     <string/>
-    </property>
-    <property name="layoutDirection">
-     <enum>Qt::LeftToRight</enum>
-    </property>
-    <property name="autoFillBackground">
-     <bool>false</bool>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::NoFrame</enum>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="textFormat">
-     <enum>Qt::RichText</enum>
-    </property>
-    <property name="pixmap">
-     <pixmap>../../assets/Images/logo_EEC_grande.png</pixmap>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>460</x>
-      <y>379</y>
-      <width>211</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string notr="true"/>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-    background-color: #0C58A4;
-    color: white;
-    border: 1px solid rgb(91, 83, 81);
-	border-radius: 8px;
-}</string>
-    </property>
-    <property name="text">
-     <string>Empezar</string>
-    </property>
-    <property name="autoDefault">
-     <bool>false</bool>
-    </property>
-    <property name="default">
-     <bool>false</bool>
-    </property>
-    <property name="flat">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_2">
-    <property name="geometry">
-     <rect>
-      <x>890</x>
-      <y>580</y>
-      <width>180</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-    background-color: #0C58A4;
-    color: white;
-    border: 1px solid rgb(91, 83, 81);
-	border-radius: 8px;
-}</string>
-    </property>
-    <property name="text">
-     <string>Ayuda</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="pushButton_3">
-    <property name="geometry">
-     <rect>
-      <x>890</x>
-      <y>640</y>
-      <width>180</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton {
-    background-color: #0C58A4;
-    color: white;
-    border: 1px solid rgb(91, 83, 81);
-	border-radius: 8px;
-}</string>
-    </property>
-    <property name="text">
-     <string>Acerca de</string>
-    </property>
-   </widget>
    <widget class="QStackedWidget" name="stackedWidget">
     <property name="geometry">
      <rect>
@@ -212,7 +54,7 @@
       <height>700</height>
      </rect>
     </property>
-    <widget class="QWidget" name="page"/>
+    <widget class="QWidget" name="landingPage"/>
     <widget class="QWidget" name="page_2"/>
    </widget>
   </widget>
