--- a/src/view/databaseExplorer.ui
+++ b/src/view/databaseExplorer.ui
@@ -27,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../../assets/logo_EEC_grande.png</normaloff>../../assets/logo_EEC_grande.png</iconset>
+    <normaloff>../../../../assets/logo_EEC_grande.png</normaloff>../../../../assets/logo_EEC_grande.png</iconset>
   </property>
   <widget class="QWidget" name="mainLayout">
    <property name="enabled">
@@ -54,9 +54,9 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>1080</width>
+      <x>250</x>
+      <y>10</y>
+      <width>540</width>
       <height>150</height>
      </rect>
     </property>
@@ -175,6 +175,7 @@ font-size: 30px;</string>
  </widget>
  <resources>
   <include location="../../assets/Qt/qtSources.qrc"/>
+  <include location="../../../../assets/Qt/qtSources.qrc"/>
  </resources>
  <connections/>
 </ui>
