--- a/src/view/databaseExplorer.ui
+++ b/src/view/databaseExplorer.ui
@@ -54,8 +54,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>10</y>
+      <x>310</x>
+      <y>0</y>
       <width>540</width>
       <height>150</height>
      </rect>
@@ -76,8 +76,8 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>140</y>
+      <x>270</x>
+      <y>150</y>
       <width>611</width>
       <height>101</height>
      </rect>
@@ -92,10 +92,10 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="addDataButton">
     <property name="geometry">
      <rect>
-      <x>210</x>
+      <x>270</x>
       <y>260</y>
       <width>171</width>
       <height>71</height>
@@ -110,13 +110,13 @@
 }</string>
     </property>
     <property name="text">
-     <string>Buscador de proyectos</string>
+     <string>Agregar proyectos</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="addAndAnalyzeButton">
+   <widget class="QPushButton" name="analyzeProyectsButton">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>710</x>
       <y>260</y>
       <width>171</width>
       <height>71</height>
@@ -131,13 +131,13 @@
 }</string>
     </property>
     <property name="text">
-     <string>Agregar y analizar</string>
+     <string>Analizar proyectos</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>110</x>
       <y>340</y>
       <width>401</width>
       <height>61</height>
@@ -170,6 +170,27 @@ font-size: 30px;</string>
     <attribute name="horizontalHeaderCascadingSectionResizes">
      <bool>false</bool>
     </attribute>
+   </widget>
+   <widget class="QPushButton" name="clearDatabaseButton">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>260</y>
+      <width>171</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+    background-color: #CBCBCB;
+    color: black;
+    border: 1px solid rgb(91, 83, 81);
+	border-radius: 8px;
+}</string>
+    </property>
+    <property name="text">
+     <string>Eliminar entradas DB</string>
+    </property>
    </widget>
   </widget>
  </widget>
